--- a/labs/05_build_an_image/pipeline.yaml
+++ b/labs/05_build_an_image/pipeline.yaml
@@ -6,9 +6,11 @@ spec:
   workspaces:
     - name: pipeline-workspace
   params:
+    - name: build-image
     - name: repo-url
     - name: branch
       default: master
+     
   tasks:
     - name: init
       workspaces:
@@ -58,14 +60,18 @@ spec:
         - lint
 
     - name: build
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
       taskRef:
-        name: echo
-      params:
-      - name: message
-        value: "Building image for $(params.repo-url) ..."
+        name: buildah
+        kind: ClusterTask
+      params:    
+      - name: IMAGE
+        value: "$(params.build-image)"
       runAfter:
         - tests
-
+          
     - name: deploy
       taskRef:
         name: echo
