--- a/labs/06_deploy_to_kubernetes/pipeline.yaml
+++ b/labs/06_deploy_to_kubernetes/pipeline.yaml
@@ -6,9 +6,10 @@ spec:
   workspaces:
     - name: pipeline-workspace
   params:
+    - name: app-name
     - name: build-image
     - name: repo-url
-    - name: branch
+    - name: branch    
       default: master
   tasks:
     - name: init
@@ -73,9 +74,10 @@ spec:
 
     - name: deploy
       taskRef:
-        name: echo
-      params:
-      - name: message
-        value: "Deploying $(params.branch) branch of $(params.repo-url) ..."
+        name: openshift-client
+        kind: ClusterTask
+      params:     
+      - name: SCRIPT
+        value: "oc create deploy $(params.app-name) --image=$(params.build-image)"   
       runAfter:
         - build
